# ApkSleuth

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
apksleuth/: __init__.py  cli.py  models.py
apksleuth/core/: analyzer.py  axml.py  batch.py  certificate_analyzer.py  diff.py  manifest_analyzer.py  native_analyzer.py  packer_detector.py  permission_analyzer.py  report_generator.py  resources.py  risk_engine.py  risk_metadata.py  sdk_detector.py  string_extractor.py  utils.py  web.py  web_jobs.py  web_models.py  web_render.py  web_utils.py
tests/: test_analyzer.py
