[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apksleuth"
version = "0.1.0"
description = "Local-first Android APK static analysis CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ApkSleuth Contributors" }
]
keywords = ["android", "apk", "security", "static-analysis", "reverse-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
certificates = ["cryptography>=42"]
dev = ["pytest>=8"]

[project.scripts]
apksleuth = "apksleuth.cli:main"

[tool.setuptools.packages.find]
include = ["apksleuth*"]
